--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
         <div class="desc">
           <p>Personal portfolio website.</p>
           <div class="btns">
-            <a href="" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://anushkasinghportfolio.netlify.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/ANUSHKASINGH809/portfolio" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -206,7 +206,7 @@
         <div class="desc">
           <p>Using Socket.io And Node.js</p>
           <div class="btns">
-            <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/ANUSHKASINGH809/Video-Conferencing" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -221,7 +221,7 @@
           <p>Course Builder website.</p>
           <div class="btns">
             <a href="https://anushka-course-builder.netlify.app/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/ANUSHKASINGH809/Course-Builder" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
