--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
           <p> <i class="fas fa-map-marked-alt"></i>Noida, India-201310</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/shikha-chaturvedi-990817212/" class="fab fa-linkedin" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/anushka-singh-761116293/" class="fab fa-linkedin" target="_blank"></a>
               <a href="https://github.com/ANUSHKASINGH809" class="fab fa-github" target="_blank"></a>
               <a href="mailto:09anushkasingh@gmail.com" class="fas fa-envelope" target="_blank"></a>
-              <a href="https://twitter.com/ShikhaC11407577" class="fab fa-twitter" target="_blank"></a>
+              <a href="" class="fab fa-twitter" target="_blank"></a>
               <a href="https://www.instagram.com/theheresy_/" class="fab fa-instagram" target="_blank"></a>
               
           </div>
