--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assests/Images/WhatsApp Image 2024-05-27 at 19.03.49_f42a5e5f.jpg" alt="">
+    <img draggable="false" class="tilt" src="./assests/Images/WhatsApp Image 2025-01-22 at 15.02.10_2b551062.jpg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -81,7 +81,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="./assests/Images/WhatsApp Image 2024-05-27 at 19.03.49_f42a5e5f.jpg" alt="">
+        <img draggable="false" class="tilt" src="./assests/Images/WhatsApp Image 2025-01-22 at 15.02.10_2b551062.jpg" alt="">
     </div>
     <div class="content">
         <h3>I'm Anushka</h3>
