--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><a class="github" href="https://github.com/ANUSHKASINGH809" target="_blank"><i class="fab fa-github"></i></a></li>
             <li><a class="twitter" href="https://twitter.com/theheresy_" target="_blank"><i class="fab fa-twitter"></i></a></li>
             <li><a class="Discord" href="https://discord.com/channels/@me" target="_blank"><i class="fab fa-discord"></i></a></li>
-            <li><a class="instagram" href="https://www.instagram.com/theheresy_/"><i class="fab fa-instagram" target="_blank"></i></a></li>
+            <li><a class="instagram" href="https://www.instagram.com/heretic__30/"><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
       </div>
     </div>
@@ -381,7 +381,7 @@
               <a href="https://github.com/ANUSHKASINGH809" class="fab fa-github" target="_blank"></a>
               <a href="mailto:09anushkasingh@gmail.com" class="fas fa-envelope" target="_blank"></a>
               <a href="" class="fab fa-twitter" target="_blank"></a>
-              <a href="https://www.instagram.com/theheresy_/" class="fab fa-instagram" target="_blank"></a>
+              <a href="https://www.instagram.com/heretic__30?igsh=MXM3YjYweWU2aTZrYQ==" class="fab fa-instagram" target="_blank"></a>
               
           </div>
       </div>
